# service-desk-assistant

./: .dockerignore  .env  .gitignore  DEV_NOTES.md  README.md  README_short.md  docker-compose.yml  history.db  pyproject.toml  requirements.txt
.streamlit/: config.toml
docker/: Dockerfile.api  Dockerfile.ui
kb_data/: owners.csv
kb_default/: faq_data.csv
platform_assistant/: __init__.py  ui.py
platform_service/: __init__.py  api.py  constants.py  core.py  logging_config.py
platform_service/db/: __init__.py  history.py
tests/: __init__.py  conftest.py  test_api.py
