[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "service-desk-assistant"
version = "0.2.0"
description = "Enterprise-grade service desk assistant with Streamlit frontend and FastAPI backend."
requires-python = ">=3.11"

dependencies = [
    # Core
    "python-dotenv>=1.0.1",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "streamlit>=1.36.0",
    "httpx>=0.27.0",
    "requests>=2.32.0",
    "pydantic>=2.6.0",

    # LangChain stack
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-openai>=0.1.8",
    "langgraph>=0.2.14",
    "faiss-cpu>=1.8.0",
    "kss>=4.5.4",  
    "konlpy>=0.6.0", 

    # Loaders
    "pypdf>=4.2.0",
    "docx2txt>=0.8",
    "python-multipart",
    
    # Version Pinning
    "numpy>=1.26.4,<2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.0",
]

[tool.setuptools.packages.find]
where = ["platform_service"]
include = ["platform_service*"]

[tool.pytest.ini_options]
testpaths = ["tests"]   # tests/ 폴더만 테스트로 인식
norecursedirs = ["logs"]


