[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-helpdesk"
version = "0.2.0"
description = "Enterprise-grade service desk assistant with Streamlit frontend and FastAPI backend."
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    # Core
    "python-dotenv>=1.0.1",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "streamlit>=1.36.0",
    "httpx>=0.27.0",
    "requests>=2.32.0",
    "pydantic>=2.6.0",
    "python-multipart>=0.0.9",

    # LangChain stack
    "langchain>=1.2.0,<2.0.0",
    "langchain-community>=0.4.0,<1.0.0",
    "langchain-openai>=1.1.0,<2.0.0",
    "langgraph>=1.1.0,<2.0.0",
    "langchain-text-splitters>=1.1.0,<2.0.0",

    # Vector / NLP
    "numpy>=2.1.0,<3.0.0",
    "faiss-cpu>=1.12.0",
    "kss>=6.0.4",

    # Loaders
    "pypdf>=4.2.0",
    "docx2txt>=0.8",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.0",
]

nlp-ko = [
    "konlpy>=0.6.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["platform_service*"]
exclude = ["tests*", "logs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["logs", ".venv", "dist", "build"]